force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__AdjustedReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AdjustedReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjusted Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>