force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__PreauthorizationNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PreauthorizationNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Preauthorization Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>