force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/recordTypes/vlocity_ins__ClaimLineItem.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__ClaimLineItem</fullName>
    <active>true</active>
    <label>Claim Line Item</label>
</RecordType>