force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/recordTypes/vlocity_ins__LineItemAdjustment.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__LineItemAdjustment</fullName>
    <active>true</active>
    <label>Line Item Adjustment</label>
</RecordType>